# EnhanceVision

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  LICENSE  QML-README.md  README.md  README_CN.md  SECURITY.md  SECURITY_CN.md  THIRD_PARTY_LICENSES.md  launch_with_logging.py  temp_diff.txt
.agents/rules/: 00-rule-governance.md  01-project-overview.md  02-architecture.md  03-cpp-standards.md  04-qml-standards.md  05-build-system.md  06-i18n.md  07-performance.md  08-ui-design.md  09-shader-standards.md  10-skills-and-tools.md
.cursor/rules/: 00-rule-governance.mdc  02-architecture.mdc  03-cpp-standards.mdc  05-build-system.mdc  06-i18n.mdc  07-performance.mdc  08-ui-design.mdc  09-shader-standards.mdc
.trae/: skill-config.json
.trae/agents/: ai-engineer.md  devops-engineer.md  graphics-engineer.md  media-engineer.md  project-manager.md  qt-developer.md  test-engineer.md
.trae/documents/: adjust-message-card-button-order.md  ai-engine-refactor-plan.md  ai-inference-auto-optimization-plan.md  ai-inference-crash-fix-plan.md  ai-inference-first-task-crash-fix.md  ai-inference-gpu-mode-fix-plan.md  ai-inference-mode-switch-crash-fix-plan.md  ai-inference-progress-optimization-plan.md  ai-inference-refactoring-plan.md  ai-mode-comprehensive-check-plan.md  ai-model-panel-fix-plan.md  ai-model-switch-fix-plan.md  ai-video-processing-crash-investigation.md  ai-video-processing-refactor-plan.md  auto-reprocess-settings-plan.md  backend-shader-optimization-plan.md  cleanup-debug-logs-plan.md  concurrency-control-architecture-design.md  custom-titlebar-unification-plan.md  embedded-window-drag-optimization-plan.md  fix-ai-cancel-crash-plan.md  fix-ai-inference-crash-plan.md  fix-ai-message-send-lag.md  fix-ai-panel-i18n-and-layout.md  fix-ai-params-intermittent-scroll.md  fix-ai-params-panel-bugs.md  fix-ai-params-panel-truncation.md  fix-app-close-process-residue.md  fix-auto-save-result-not-working.md  fix-cache-cleanup-issues.md  fix-crash-recovery-warning-dialog.md  fix-custom-titlebar-buttons-plan.md  fix-delete-button-and-image-progress.md  fix-denoise-and-consistency.md  fix-dialog-close-and-session-animation.md  fix-event-penetration-in-media-viewer.md  fix-file-add-failure.md  fix-icon-and-hover-issues.md  fix-input-focus-not-clearing.md  fix-left-resize-jitter.md  (+78 more)
.trae/rules/: 00-rule-governance.md  01-project-overview.md  02-architecture.md  03-cpp-standards.md  04-qml-standards.md  05-build-system.md  06-i18n.md  07-performance.md  08-ui-design.md  09-shader-standards.md  10-skills-and-mcp.md  10-skills-and-tools.md
.windsurf/rules/: 00-rule-governance.md  01-project-overview.md  01-project-overview.mdc  02-architecture.md  02-architecture.mdc  03-cpp-standards.md  03-cpp-standards.mdc  04-qml-standards.md  04-qml-standards.mdc  05-build-system.md  05-build-system.mdc  06-i18n.md  06-i18n.mdc  07-performance.md  08-ui-design.md  09-shader-standards.md  10-skills-and-tools.md  code-modification-principle.md  midway-inquiry-rule.md  qt-run-rule.md
docs/: 功能设计0.2.md
docs/ApplicationData/: StorageDirectory.md
docs/Learning/: Insights.md  容易出错的问题.md
docs/Notes/: ai-control-panel-scroll-fix-and-debug-cleanup-notes.md  ai-inference-auto-params-and-viewer-fit-notes.md  ai-inference-crash-fix-notes.md  ai-inference-mode-switch-crash-fix-notes.md  ai-inference-oom-and-quality-fix-notes.md  ai-inference-progress-display-optimization-notes.md  ai-model-panel-ui-optimization-notes.md  ai-model-params-panel-optimization-notes.md  ai-processing-time-feature-notes.md  ai-video-inference-crash-fix-notes.md  ai-video-processing-refactor-notes.md  app-icon-and-placeholder-implementation-notes.md  auto-retry-and-failed-tip-fix-notes.md  cache-cleanup-fix-notes.md  cache-management-refactor-notes.md  concurrency-architecture-implementation-notes.md  concurrency-architecture.md  concurrency-refactor-to-linear-queue-notes.md  concurrency-resource-management-implementation-notes.md  context-menu-refactor-notes.md  cpu-video-inference-crash-fix-notes.md  crash-recovery-warning-fix-notes.md  custom-titlebar-drag-issue.md  custom-titlebar-implementation-notes.md  dialog-clipping-fix-notes.md  documentation-update-checklist.md  dropoverlay-animation-implementation-notes.md  embedded-media-viewer-fix-notes.md  embedded-media-viewer-optimization-notes.md  embedded-viewer-cursor-fix-notes.md  embedded-window-drag-optimization-notes.md  enhancevision-bug-fixes-and-optimizations-20260326.md  ffmpeg-missing-bin-postbuild-fix-notes.md  file-format-unification-and-loading-fix-notes.md  fullscreen-drag-restore-fix-notes.md  gpu-video-export-implementation-notes.md  i18n-language-switch-implementation.md  install-maintenance-and-storage-unification-notes.md  install-upgrade-cache-visibility-fix-notes.md  installer-ui-optimization-and-path-separator-fix-notes.md  (+72 more)
docs/Plan/: AI推理模式计划.md  Analyze-Inference.md  DropOverlay-Animation-Design.md  InferenceEngineModelSelectionFinal.md  ModelFormatInferenceEngineTechEval.md  ONNX-TensorRT-技术评估.md  ONNX与TensorRT技术分析.md  ShaderEffect一致性方案.md  preview-export-consistency-solutions.md  主题切换功能技术分析报告.md  任务控制模式详解.md  多媒体处理交互卡顿根因定位与治理计划-2026-03-24.md  多线程改进计划.md  消息通知设计.md
docs/preReleasePrep/: 01-release-checklist_CN.md  01-release-checklist_EN.md  02-build-guide_CN.md  02-build-guide_EN.md  03-packaging-guide_CN.md  03-packaging-guide_EN.md  04-github-release-guide_CN.md  04-github-release-guide_EN.md  05-third-party-compliance_CN.md  05-third-party-compliance_EN.md  06-version-management_CN.md  06-version-management_EN.md  InstallImgDesign.md
installer/: README.md  setup.nsi
installer/license/: license_en.txt  license_zh.txt
packaging/installer/: README.md  setup.nsi
packaging/scripts/: build-package.ps1  verify-package.ps1
portable/: start.vbs
qml/: App.qml  main.qml
resources/: app.rc  qml.qrc
scripts/: build-package.ps1  verify-package.ps1
src/: main.cpp
tests/: InstallMaintenanceServiceTest.cpp  MessageStatusResolverTest.cpp  SessionPruneUtilsTest.cpp
(+328 files in other folders)
